# webrsync

./: .gitignore  build.gradle  settings.gradle
src/main/java/com/github/webrsync/: AbstractChecksumCalculator.java  ChecksumHolderProcessor.java  ChecksumParser.java  ChecksumUtil.java  RollingChecksumParser.java  TargetFileProcessor.java  WrongAlgorithmException.java
src/main/java/com/github/webrsync/bootstrap/: ChannelInitializerImpl.java  NSync.java
src/main/java/com/github/webrsync/data/: AbstractChecksum.java  Checksum.java  (+7 more)
src/main/native/: .gitignore
src/main/native/webrsync_libacl/: CMakeLists.txt  com_github_webrsync_sftp_fs_AclManager.c  com_github_webrsync_sftp_fs_AclManager.h  create_new_ace.c  create_new_acl.c  decode_acl.c  do_file_inherit.c  does_acl_exist.c  encode_acl.c  get_acl_size.c  get_sftp_acl.c  is_directory.c  library.c  set_ace.c  set_sftp_acl.c  sftp_acl.h  throw_exception.c
src/main/native/webrsync_libstat/: com_github_webrsync_sftp_SftpFileAttributes.c  com_github_webrsync_sftp_SftpFileAttributes.h
src/test/java/: RsyncServerTest.java  TestChecksumHolderProcessor.java  TestChecksumParser.java  TestChecksumUtil.java  TestNSync.java  TestTargetFileProcessor.java  testfile.txt  testfile2.txt
src/test/java/data/: TestChecksumHolder.java  TestWeakChecksum.java
src/test/java/sftp/: DefaultSftpPacketTest.java  TestExtensionTable.java  TestSftpPacket.java
src/test/java/sftp/attrib/: TestAttribBits.java  TestSftpFileAttributes.java
src/test/java/sftp/codec/: TestSftpInitPacketEncoder.java
src/test/java/sftp/fs/: TestAclManager.java
(+40 files in other folders)
